--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div>
+    <div>
         <h1><img src="">Widelab</h1>
         <button id="button">Request</button>
         <h3>Search</h3>
@@ -37,6 +38,7 @@
         <h3><img src="">Maciej Kalaska</h3>
         <h5>maciej@widelab.co</h5>
     </div>
+</div>
 
     
 </body>
