created request button

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylsheet" type="text/css" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
     <div>
     <div>
-        <h1><img src="">Widelab</h1>
+        <h2><img src="">Widelab</h2>
         <button id="button">Request</button>
         <h3>Search</h3>
         <h3>Inbox</h3>
