--- a/index.html
+++ b/index.html
@@ -12,39 +12,45 @@
 <body>
     <!-- 14-42 lines in 1 div -->
     <div>
-    <div>
-        <h1><img src="">Widelab</h1>
-        <button id="button">Request</button>
-        <h3>Search</h3>
-        <h3>Inbox</h3>
-        <h3>Notifications</h3>
-    </div>
-    <br>
-    <div>
-        <h2>Genral</h2>
-        <h3>Market</h3>
-        <h3>Analytics</h3>
-        <h3>News</h3>
-        <h3>Reporting</h3>
-        <h3>Wallet</h3>
-        <h3>More</h3>
-    </div>
-    <br>
-    <div>
+        <div>
+            <h1><img src="">Widelab</h1>
+            <button id="button">Request</button>
+            <h3>Search</h3>
+            <h3>Inbox</h3>
+            <h3>Notifications</h3>
+        </div>
+        <br>
+        <div>
+            <h2>Genral</h2>
+            <h3>Market</h3>
+            <h3>Analytics</h3>
+            <h3>News</h3>
+            <h3>Reporting</h3>
+            <h3>Wallet</h3>
+            <h3>More</h3>
+        </div>
+        <br>
+        <div>
 
-        <h3>Help</h3>
-        <h3>Settings</h3>
-    </div>
-    <br>
-    <div>
+            <h3>Help</h3>
+            <h3>Settings</h3>
+        </div>
+        <br>
+        <div>
 
-        <h3><img src="">Maciej Kalaska</h3>
-        <h5>maciej@widelab.co</h5>
+            <h3><img src="">Maciej Kalaska</h3>
+            <h5>maciej@widelab.co</h5>
+        </div>
     </div>
-</div>
 
 
     <div id="mainpage">
+
+        <div id="market"></div>
+        <div id="dashboard"></div>
+        <div id="analytics"></div>
+        <div id="News"></div>
+        <div id="reporting"></div>
 
     </div>
     <div id="twitter">
