icons initially set

--- a/index.html
+++ b/index.html
@@ -7,38 +7,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <title>Document</title>
+    <script src="https://kit.fontawesome.com/52e4e23f71.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <!-- 14-42 lines in 1 div -->
     <div>
     <div>
-        <h2><img src="">Widelab</h2>
+        <h2 class="img"><img src="..\img\widelab_logo.png">Widelab</h2>
         <button id="button">Request</button>
-        <h3>Search</h3>
-        <h3>Inbox</h3>
-        <h3>Notifications</h3>
+        <h3><i class="fa-solid fa-magnifying-glass"></i>&nbsp Search</h3>
+        <h3><i class="fa-solid fa-inbox"></i>&nbsp Inbox</h3>
+        <h3><i class="fa-solid fa-bell"></i>&nbsp Notifications</h3>
     </div>
     <br>
     <div>
         <h2>Genral</h2>
-        <h3>Market</h3>
-        <h3>Analytics</h3>
-        <h3>News</h3>
-        <h3>Reporting</h3>
-        <h3>Wallet</h3>
-        <h3>More</h3>
+        <h3<i class="fa-solid fa-house"></i>&nbsp Market</h3>
+        <h3><i class="fa-light fa-grid-horizontal"></i>&nbsp Dashboard</h3>
+        <h3><i class="fa-solid fa-tv"></i>&nbsp Analytics</h3>
+        <h3><i class="fa-solid fa-newspaper"></i>&nbsp News</h3>
+        <h3><i class="fa-light fa-file-chart-column"></i>&nbsp Reporting</h3>
+        <h3><i class="fa-solid fa-wallet"></i>&nbsp Wallet</h3>
+        <h3><i class="fa-solid fa-caret-down"></i>&nbsp More</h3>
     </div>
     <br>
     <div>
 
-        <h3>Help</h3>
-        <h3>Settings</h3>
+        <h3><i class="fa-light fa-toggle-off"></i>&nbsp Help</h3>
+        <h3><i class="fa-light fa-gear"></i>&nbsp Settings</h3>
     </div>
     <br>
     <div>
 
-        <h3><img src="">Maciej Kalaska</h3>
+        <h2 class="img"><img src="..\img\gmail_bitmoji.jpg">Maciej Kalaska</h3>
         <h5>maciej@widelab.co</h5>
     </div>
 </div>
